--- a/06-course-PyChain/requirements.txt
+++ b/06-course-PyChain/requirements.txt
@@ -30,7 +30,7 @@ Jinja2==3.1.6
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 jupyter_client==8.6.3
-jupyter_core==5.7.2
+jupyter_core>=5.8.1
 kiwisolver==1.4.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
